2005-02-12  Paolo Borelli  <pborelli@katamail.com>

	* gedit-view.c: refresh ln and col only when the insert mark
	is moved. Speeds up search and replace.

2005-02-08  Paolo Borelli  <pborelli@katamail.com>

	* gedit2.c: use icon from the icon theme.

==== gedit 2.9.6 ====

2005-02-07  Paolo Maggi  <paolo@gnome.org>

	Fixed bug #122433: Alt+N shortcut does not select correct tab

	* bonobo-mdi.c (child_list_activated_cb): uses view instead of child
	(child_list_menu_add_item_from_view): new function
	(child_list_menu_create): uses views instead of children
	(child_list_menu_remove): ditto (child_list_menu_create_all)
	(book_button_release) (bonobo_mdi_move_view_to_new_window)
	(book_create) (app_create) (bonobo_mdi_add_view_real)
	(bonobo_mdi_add_views) (bonobo_mdi_add_toplevel_view)
	(bonobo_mdi_remove_view): call child_list_menu_remove_all and
	child_list_menu_create_all
	 (bonobo_mdi_add_child)	(bonobo_mdi_remove_child): don't call
	child_list_menu_remove_all and child_list_menu_create_all

	Thanks to Paolo Borelli  <pborelli@katamail.com> for the first 
	version of the patch.

2005-02-03  Paolo Maggi  <paolo@gnome.org>

	* recent-files/* : update from libegg.

2005-02-01  Paolo Borelli  <pborelli@katamail.com>

	* gedit-menus.c: fix thinko in my escape slashes patch.

2005-02-01  Paolo Borelli  <pborelli@katamail.com>

	* gedit2.c:
	* gedit-metadata.[ch]: lazy init for the metadata.

2005-02-01  Paolo Maggi  <paolo@gnome.org>

	* gedit2.c (gedit_set_default_icon): uses 
	gtk_window_set_default_icon_from_file instead of 
	gnome_window_icon_set_default_from_file
	(main): sets the activation env to the canonical DISPLAY value,
	fixes bug #157147 (per display registration fails if DISPLAY 
	env is not complete)

2005-01-27  Paolo Borelli  <pborelli@katamail.com>

	* gedit-mdi.c: plug small memory leak.

2005-01-27  Paolo Borelli  <pborelli@katamail.com>

	* gedit-menus.c: escape slashes from bonobo menus to fix potential
	crash