@@ -202,6 +202,10 @@
     <gedit:Tag _name="Declare flag">
       <gedit:Begin>DECLARE</gedit:Begin>
     </gedit:Tag>
+
+    <gedit:Tag _name="Defer attribute">
+      <gedit:Begin>DEFER</gedit:Begin>
+    </gedit:Tag>
  
     <gedit:Tag _name="Definition description">
       <gedit:Begin>&lt;DD&gt; </gedit:Begin>
@@ -861,15 +865,7 @@
     <gedit:Tag _name="Scope covered by header cells">
       <gedit:Begin>SCOPE=</gedit:Begin>
     </gedit:Tag>
- 
-    <gedit:Tag _name="Script execution defer">
-      <gedit:Begin>DEFER</gedit:Begin>
-    </gedit:Tag>
- 
-    <gedit:Tag _name="Script language name">
-      <gedit:Begin>LANGUAGE</gedit:Begin>
-    </gedit:Tag>
- 
+  
     <gedit:Tag _name="Script language name">
       <gedit:Begin>LANGUAGE=</gedit:Begin>
     </gedit:Tag>
