@@ -23,7 +23,6 @@ gedit/dialogs/plugin-manager.glade2
 gedit/dialogs/program-location-dialog.glade2
 gedit/dialogs/replace.glade2
 gedit/dialogs/uri.glade2
-gedit/dialogs/close_all_dialog.glade2
 gedit/gedit-commands.c
 gedit/gedit-debug.c
 gedit/gedit-document.c
