@@ -1,3 +1,7 @@
+2005-02-12  Paolo Maggi  <paolo@gnome.org>
+
+	* POTFILES.in: removed unused file close_all_dialog.glade2
+
 2005-02-12  Priit Laes  <plaes@cvs.gnome.org>
 
 	* et.po: Translation updated.
