@@ -1,3 +1,8 @@
+2005-02-12  Paolo Maggi  <paolo@gnome.org>
+
+	* dialogs/close_all_dialog.glade2: removed from CVS since it is 
+	unused and not distributed.
+
 2005-02-12  Paolo Borelli  <pborelli@katamail.com>
 
 	* gedit-view.c: refresh ln and col only when the insert mark
